src/test/resources/scripts/language/parser/valid/tuple.sbsc
// test parsing tuples

h = (2.4, "bazinga");
foo = ("hello", ((((1.2, false)), (h))));


bar = ("hello", 1.2);
bar2 = (2.4, "bazinga");


baz = (1.2, false);


return true;