src/test/resources/scripts/language/parser/invalid/cast/badNumCastStr.sbsc
// parser should error at invalid cast

num("2.4");

return false;